--- a/pages/cart.html
+++ b/pages/cart.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart Page</title>
     <link rel="stylesheet" href="../style/styles.css">
     <link rel="shortcut icon" href="../image/favicon.ico" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
@@ -28,7 +31,8 @@
             <div class="headericon">
                 <div class="currency-switcher">
                     <input type="checkbox" id="currencyDropdown">
-                    <label for="currencyDropdown" class="currency-logo"><i class="fa-regular fa-dollar-sign"></i></label>
+                    <label for="currencyDropdown" class="currency-logo"><i
+                            class="fa-regular fa-dollar-sign"></i></label>
                     <ul class="currency-menu">
                         <li>$ USD</li>
                         <li>€ EUR</li>
@@ -36,7 +40,92 @@
                     </ul>
                 </div>
                 <div>
-                    <a href="cart.html"><i class="fa-solid fa-cart-shopping"></a>
+                    <a data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
+                        aria-controls="offcanvasExample">
+                        <span><i class="fa-solid fa-cart-shopping"></i></span>
+                    </a>
+                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample"
+                        aria-labelledby="offcanvasExampleLabel">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasExampleLabel"><span style="font-weight: bold;">My
+                                    Bags</span><span style="font-size: 0.8em;">, 3 items</span></h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
+                                aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <div class="cart-items">
+                                <!-- First Cart Item -->
+                                <div class="cart-item">
+                                    <div class="item-details">
+                                        <h2>Apollo</h2>
+                                        <p>Running Short</p>
+                                        <p><strong>$50.00</strong></p>
+                                        <p>SIZE:</p>
+                                        <div class="size-optionscanvas">
+                                            <button>XS</button>
+                                            <button class="selected">S</button>
+                                            <button>M</button>
+                                            <button>L</button>
+                                        </div>
+                                        <p>COLOR:</p>
+                                        <div class="color-options">
+                                            <span class="color-box selected" style="background-color: #D3D2D5;"></span>
+                                            <span class="color-box" style="background-color: #2B2B2B;"></span>
+                                            <span class="color-box" style="background-color: #0F6450;"></span>
+                                        </div>
+                                    </div>
+                                    <div class="item-quantity">
+                                        <button class="quantity-btn">+</button>
+                                        <span>1</span>
+                                        <button class="quantity-btn">-</button>
+                                    </div>
+                                    <div class="item-image">
+                                        <img src="../image/Product D.png" alt="Apollo Running Short">
+                                    </div>
+                                </div>
+
+                                <!-- Second Cart Item -->
+                                <div class="cart-item">
+                                    <div class="item-details">
+                                        <h2>Jupiter</h2>
+                                        <p>Wayfarer</p>
+                                        <p><strong>$75.00</strong></p>
+                                        <p>SIZE:</p>
+                                        <div class="size-optionscanvas">
+                                            <button>S</button>
+                                            <button class="selected">M</button>
+                                        </div>
+                                        <p>COLOR:</p>
+                                        <div class="color-options">
+                                            <span class="color-box selected" style="background-color: #1D1F22;"></span>
+                                            <span class="color-box" style="background-color: #15A4C3;"></span>
+                                            <span class="color-box" style="background-color: #EA8120;"></span>
+                                        </div>
+                                    </div>
+                                    <div class="item-quantity">
+                                        <button class="quantity-btn">+</button>
+                                        <span>2</span>
+                                        <button class="quantity-btn">-</button>
+                                    </div>
+                                    <div class="item-image">
+                                        <img src="../image/Product D (1).png" alt="Jupiter Wayfarer">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="total">
+                                <div>
+                                    <p>Total:</p>
+                                </div>
+                                <div>
+                                    <p><strong>$200.00</strong></p>
+                                </div>
+                            </div>
+                            <div class="view-checkout">
+                                <a href="./pages/cart.html"><button class="viewbag"> VIEW BAG</button></a>
+                                <button class="checkout">CHECK OUT</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -51,8 +140,8 @@
     </header>
 
     <main>
+        <h1 class="title">CART</h1>
         <div class="cart-container">
-            <h1>CART</h1>
             <div class="cart-items">
                 <!-- First Cart Item -->
                 <div class="cart-item">
@@ -69,9 +158,9 @@
                         </div>
                         <p>COLOR:</p>
                         <div class="color-options">
-                            <span class="color-box select" style="background-color: #D3D3C9;"></span>
-                            <span class="color-box" style="background-color: #333;"></span>
-                            <span class="color-box" style="background-color: #1A5D44;"></span>
+                            <span class="color-box selected" style="background-color: #D3D2D5;"></span>
+                            <span class="color-box" style="background-color: #2B2B2B;"></span>
+                            <span class="color-box" style="background-color: #0F6450;"></span>
                         </div>
                     </div>
                     <div class="item-quantity">
@@ -80,7 +169,7 @@
                         <button class="quantity-btn">-</button>
                     </div>
                     <div class="item-image">
-                        <img src="../image/Product D.png 1.png" alt="Apollo Running Short">
+                        <img src="../image/Product D.png" alt="Apollo Running Short">
                     </div>
                 </div>
 
@@ -97,9 +186,9 @@
                         </div>
                         <p>COLOR:</p>
                         <div class="color-options">
-                            <span class="color-box select" style="background-color: #1A5D44;"></span>
-                            <span class="color-box" style="background-color: #FF8C00;"></span>
-                            <span class="color-box" style="background-color: #008B8B;"></span>
+                            <span class="color-box selected" style="background-color: #1D1F22;"></span>
+                            <span class="color-box" style="background-color: #15A4C3;"></span>
+                            <span class="color-box" style="background-color: #EA8120;"></span>
                         </div>
                     </div>
                     <div class="item-quantity">
@@ -108,7 +197,7 @@
                         <button class="quantity-btn">-</button>
                     </div>
                     <div class="item-image">
-                        <img src="../image/Product D (1).png 2.png" alt="Jupiter Wayfarer">
+                        <img src="../image/Product D (1).png" alt="Jupiter Wayfarer">
                     </div>
                 </div>
             </div>
@@ -122,6 +211,10 @@
                 <button class="order-btn">ORDER</button>
             </div>
         </div>
-    </main> 
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
