--- a/pages/product6.html
+++ b/pages/product6.html
@@ -122,7 +122,7 @@
                                 </div>
                             </div>
                             <div class="view-checkout">
-                                <a href="./pages/cart.html"><button class="viewbag"> VIEW BAG</button></a>
+                                <a href="../pages/cart.html"><button class="viewbag"> VIEW BAG</button></a>
                                 <button class="checkout">CHECK OUT</button>
                             </div>
                         </div>
