add a responsive query

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -31,8 +31,7 @@
             <div class="headericon">
                 <div class="currency-switcher">
                     <input type="checkbox" id="currencyDropdown">
-                    <label for="currencyDropdown" class="currency-logo"><i
-                            class="fa-regular fa-dollar-sign"></i></label>
+                    <label for="currencyDropdown" class="currency-logo"><i class="fa-regular fa-dollar-sign"></i></label>
                     <ul class="currency-menu">
                         <li>$ USD</li>
                         <li>€ EUR</li>
@@ -41,7 +40,7 @@
                 </div>
                 <div>
                     <a data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
-                        aria-controls="offcanvasExample">
+                      aria-controls="offcanvasExample">
                         <span><i class="fa-solid fa-cart-shopping"></i></span>
                     </a>
                     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample"
@@ -129,14 +128,6 @@
                 </div>
             </div>
         </nav>
-        <div class="padding">
-            <div><img src="../image/Padding right.png" alt="padding right"></div>
-            <div><img src="../image/Padding right.png" alt="padding right"></div>
-            <div><img src="../image/Padding right.png" alt="padding right"></div>
-            <div><img src="../image/Padding right.png" alt="padding right"></div>
-            <div><img src="../image/Padding right.png" alt="padding right"></div>
-            <div><img src="../image/Padding right.png" alt="padding right"></div>
-        </div>
     </header>
 
     <main>
